--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:15
+FROM node:dubnium-alpine AS api
 
 WORKDIR /usr/src/app
 
-RUN apt-get update && apt-get install -y wget
+RUN apk update && apk add wget
 
 ENV DOCKERIZE_VERSION v0.6.1
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
@@ -17,4 +17,6 @@ COPY . .
 
 EXPOSE 3000
 
-CMD ["node","index.js"]
+FROM nginx:stable-alpine AS proxy
+
+COPY /nginx/default.conf /etc/nginx/conf.d/default.conf
